# rag-bot

./: .gitignore  app.py  index_pdf.py  pyproject.toml  readme.md  requirements.txt  scratch_test.py
vector_db/: chroma.sqlite3
